# dde

./: .clang-format  README.md  meson.build  setup.sh
convey/: convey-hyprland.c  convey-hyprland.h  convey.service.in  main.c  meson.build
de/: README.md  de-containing-box.c  de-containing-box.h  de-size.c  de-size.h  de-tween.c  de-tween.h  de-workspaces.c  de-workspaces.h  de.h  meson.build
de/dbus/: compositor.xml
launcher/: a.out  hash-map.c  launcher-application.c  launcher-application.h  launcher-window.c  launcher-window.h  main.c  meson.build
launcher/resources/: launcher.gresource.xml  style.css
proxy/: main.c  meson.build  proxy-hyprland.c  proxy-hyprland.h  proxy.service.in
shell/: main.c  meson.build  org.dh.shell.gschema.xml  shell-application.c  shell-application.h  shell-background.c  shell-background.h  shell-corners.c  shell-corners.h  shell-panel.c  shell-panel.h  shell-settings.c  shell-settings.h  shell-time-label.c  shell-time-label.h  shell-time.c  shell-time.h  shell-window.c  shell-window.h  shell-workspaces.c  shell-workspaces.h
shell/resources/: shell.gresource.xml  style.css
